--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
-      <p class="mb-1">&copy; 2021–2023 Design by <a href="#">NPTrieu</a></p>
+      <p class="mb-1">&copy; 2021–2023 Design by <a href="https://github.com/NPTrieu">NPTrieu</a></p>
     </footer>
   </div>
 
